// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed state 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c4 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c1 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c6 {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c17 {
  box-sizing: border-box;
  max-width: 500px;
  padding: 8px;
  height: 150px;
  width: 100%;
  color: #FFFFFF;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.54);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c19:hover,
.c19:focus {
  background: #B29DFF;
}

.c19:active {
  background: #C5B6FF;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c16 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c7 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c13 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c11 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c9 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c10 {
  opacity: 1;
}

.c12 {
  opacity: 0.5;
}

.c18 {
  outline: none;
  background: transparent;
}

.c18::placeholder {
  color: rgba(255,255,255,0.54);
}

.c18:hover,
.c18:focus,
.c18:active {
  border: 1px solid rgba(255,255,255,0.72);
}

<div>
  <div
    class="c0"
    style="position: relative;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        loggedInUsername
         - add a review
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="danger"
      >
        server error
      </div>
      <div
        class="c5"
      >
        <div
          class="c6 c7"
        >
          <label
            class="c8"
          >
            <input
              checked=""
              class="c9"
              name="requestState"
              type="radio"
              value="DENIED"
            />
            <span
              class="c10"
            >
              Reject request
            </span>
          </label>
          <label
            class="c8"
          >
            <input
              class="c9"
              name="requestState"
              type="radio"
              value="APPROVED"
            />
            <span
              class="c10"
            >
              Approve short-term access
               (12 hours)
            </span>
          </label>
          <label
            class="c11"
          >
            <input
              class="c9"
              disabled=""
              name="requestState"
              type="radio"
              value="PROMOTED"
            />
            <span
              class="c12"
            >
              <span>
                <div
                  class="c6 c13"
                >
                  <div
                    class="c14"
                  >
                    Approve long-term access via Access List with the requested resources
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        class="c15"
      >
        <label
          class="c16"
          font-size="0"
        >
          Message
        </label>
        <textarea
          class="c17 c18"
          color="text.main"
          height="150px"
          placeholder="Optional message..."
          width="100%"
        />
      </div>
      <button
        class="c19"
        kind="primary"
      >
        Submit Review
      </button>
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c1 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c5 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c16 {
  box-sizing: border-box;
  max-width: 500px;
  padding: 8px;
  height: 150px;
  width: 100%;
  color: #FFFFFF;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.54);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c18:hover,
.c18:focus {
  background: #B29DFF;
}

.c18:active {
  background: #C5B6FF;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c15 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c6 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c12 {
  display: flex;
  align-items: center;
}

.c7 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c10 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c8 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c9 {
  opacity: 1;
}

.c11 {
  opacity: 0.5;
}

.c17 {
  outline: none;
  background: transparent;
}

.c17::placeholder {
  color: rgba(255,255,255,0.54);
}

.c17:hover,
.c17:focus,
.c17:active {
  border: 1px solid rgba(255,255,255,0.72);
}

<div>
  <div
    class="c0"
    style="position: relative;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        loggedInUsername
         - add a review
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <label
            class="c7"
          >
            <input
              checked=""
              class="c8"
              name="requestState"
              type="radio"
              value="DENIED"
            />
            <span
              class="c9"
            >
              Reject request
            </span>
          </label>
          <label
            class="c7"
          >
            <input
              class="c8"
              name="requestState"
              type="radio"
              value="APPROVED"
            />
            <span
              class="c9"
            >
              Approve short-term access
               (12 hours)
            </span>
          </label>
          <label
            class="c10"
          >
            <input
              class="c8"
              disabled=""
              name="requestState"
              type="radio"
              value="PROMOTED"
            />
            <span
              class="c11"
            >
              <span>
                <div
                  class="c5 c12"
                >
                  <div
                    class="c13"
                  >
                    Approve long-term access via Access List with the requested resources
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        class="c14"
      >
        <label
          class="c15"
          font-size="0"
        >
          Message
        </label>
        <textarea
          class="c16 c17"
          color="text.main"
          height="150px"
          placeholder="Optional message..."
          width="100%"
        />
      </div>
      <button
        class="c18"
        kind="primary"
      >
        Submit Review
      </button>
    </div>
  </div>
</div>
`;
